# print-bambu-3mf

./: .goreleaser.yaml  README.md  go.mod  pyproject.toml
.github/workflows/: release.yml  update-labels.yml
cmd/print-bambu-3mf/: main.go
internal/bambu/: archive.go  extractor.go  golden_test.go  labels.go  labels.json  object.go  profiles.go  pyval.go  xml.go
samples/: overrides.3mf
scripts/: check_golden.sh  gen_golden.sh  trace_profiles.py  update_labels.py
src/bambu_3mf/: __init__.py  __main__.py  extractor.py  labels.py
testdata/golden/: overrides__default.out  overrides__friendly.out  overrides__full-friendly.out  overrides__full.out  overrides__list.out  overrides__no-inheritance.out  overrides__obj0-full.out  overrides__obj0.out  overrides__select-f.out  overrides__select-mp.out  per-object__default.out  per-object__friendly.out  per-object__full-friendly.out  per-object__full.out  per-object__list.out  per-object__no-inheritance.out  per-object__obj0-friendly.out  per-object__obj0-full.out  per-object__obj0-select-p.out  per-object__obj0.out  per-object__plate1-friendly.out  per-object__plate1.out  per-object__plate2-friendly.out  per-object__plate2.out  per-object__plate3-friendly.out  per-object__plate3.out  per-object__plate4-friendly.out  per-object__plate4.out  per-object__plate5-friendly.out  per-object__plate5.out  per-object__select-f.out  per-object__select-mp.out  saved-process__default.out  saved-process__friendly.out  saved-process__full-friendly.out  saved-process__full.out  saved-process__list.out  saved-process__no-inheritance.out  (+48 more)
(+4 files in other folders)
