[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambu-3mf"
version = "0.1.0"
description = "Extract printer, process, and filament profiles from Bambu Studio 3MF files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
bambu-3mf = "bambu_3mf.__main__:main"
